[746795] alignment in similar product issue are fix

--- a/src/packages/blocks/dashboard/assets/css/productDetail.css
+++ b/src/packages/blocks/dashboard/assets/css/productDetail.css
@@ -63,10 +63,6 @@
 }
 
 @media (min-width: 768px) {
-    .similarProductcontainer{
-        margin-left: 3rem;
-        margin-right: 3rem;
-    }
     .product-container .product-wrapper {
         padding: 2rem !important;
         padding-top: 0 !important;
